--- a/MyApplication/app/src/main/res/layout/activity_confirmation.xml
+++ b/MyApplication/app/src/main/res/layout/activity_confirmation.xml
@@ -35,6 +35,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
+        android:maxLines="1"
+        android:lines="1"
         android:ems="10"
         android:background="@drawable/signup_rectangle"
         android:hint="  Enter code"
