--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -34,6 +34,9 @@
         android:id="@+id/editText1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:inputType="text|textNoSuggestions"
+        android:maxLines="1"
+        android:lines="1"
         android:minHeight="48dp"
         android:ems="10"
         android:hint="  Enter username or email"
@@ -63,6 +66,9 @@
         android:layout_height="wrap_content"
         android:minHeight="48dp"
         android:ems="10"
+        android:inputType="textPassword"
+        android:maxLines="1"
+        android:lines="1"
         android:hint="  Enter Password"
         android:background="@drawable/signup_rectangle"
         android:textColor="#000000"
