--- a/MyApplication/app/src/main/res/drawable/rounded_rectangle.xml
+++ b/MyApplication/app/src/main/res/drawable/rounded_rectangle.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-android:shape="rectangle">
-<corners android:radius="180dp"/>
-<solid android:color="@android:color/transparent"/>
+    android:shape="rectangle">
+    <corners android:radius="180dp"/>
+    <solid android:color="@android:color/transparent"/>
+    <!-- Define the stroke for the white border -->
+    <stroke android:width="2dp" android:color="#000000"/>
 </shape>
