--- a/MyApplication/app/src/main/res/layout/activity_starting.xml
+++ b/MyApplication/app/src/main/res/layout/activity_starting.xml
@@ -9,19 +9,20 @@
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="160dp"
         android:src="@drawable/logo"
-        app:layout_constraintWidth_percent="0.8"
-        app:layout_constraintHeight_percent="0.3"
-        app:layout_constraintBottom_toTopOf="@id/button2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintWidth_percent="0.8" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:background="@drawable/rounded_rectangle"
         android:text="LOG IN"
         android:textColor="#ffffff"
@@ -29,13 +30,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView"
-        app:layout_constraintWidth_percent="0.8"
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintWidth_percent="0.8" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:background="@drawable/rounded_rectangle"
         android:text="SIGN UP"
         android:textColor="#ffffff"
@@ -43,7 +44,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button2"
-        app:layout_constraintWidth_percent="0.8"
-        app:layout_constraintVertical_bias="0.1" />
+        app:layout_constraintWidth_percent="0.8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
