--- a/MyApplication/app/src/main/res/layout/activity_profiledetailone.xml
+++ b/MyApplication/app/src/main/res/layout/activity_profiledetailone.xml
@@ -72,7 +72,7 @@
         android:background="@drawable/signup_rectangle"
         android:ems="10"
         android:hint="  Enter last name"
-        android:inputType="textPassword"
+        android:inputType="textPersonName"
         android:lines="1"
         android:maxLines="1"
         android:minHeight="48dp"
