--- a/MyApplication/app/src/main/res/layout/activity_signup.xml
+++ b/MyApplication/app/src/main/res/layout/activity_signup.xml
@@ -46,13 +46,26 @@
 
     <!-- Repeated pattern for TextViews and EditTexts -->
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
+        android:text="Password:"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView" />
+
     <EditText
         android:id="@+id/editText2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="88dp"
         android:background="@drawable/signup_rectangle"
-        android:hint="  Enter email"
+        android:hint="Enter password"
         android:lines="1"
         android:maxLines="1"
         android:minHeight="48dp"
