--- a/MyApplication/app/src/main/res/drawable/rounded_rectangle.xml
+++ b/MyApplication/app/src/main/res/drawable/rounded_rectangle.xml
@@ -4,5 +4,5 @@
     <corners android:radius="180dp"/>
     <solid android:color="@android:color/transparent"/>
     <!-- Define the stroke for the white border -->
-    <stroke android:width="2dp" android:color="#000000"/>
+    <stroke android:width="2dp" android:color="#FFFFFF"/>
 </shape>
