major ui changes: signup page

--- a/MyApplication/app/src/main/res/layout/activity_confirmation.xml
+++ b/MyApplication/app/src/main/res/layout/activity_confirmation.xml
@@ -10,13 +10,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/logo"
-        app:layout_constraintWidth_percent="0.8" 
-        app:layout_constraintHeight_percent="0.3" 
         app:layout_constraintBottom_toTopOf="@id/textView1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintWidth_percent="0.8" />
 
     <TextView
         android:id="@+id/textView1"
@@ -28,7 +28,8 @@
         app:layout_constraintBottom_toTopOf="@id/editText1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView" />
+        app:layout_constraintTop_toBottomOf="@id/imageView" 
+        app:layout_constraintVertical_bias="0.1" />
 
     <EditText
         android:id="@+id/editText1"
@@ -37,6 +38,10 @@
         android:minHeight="48dp"
         android:maxLines="1"
         android:lines="1"
+        android:paddingStart="16dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="8dp"
         android:ems="10"
         android:background="@drawable/signup_rectangle"
         android:inputType="text|textNoSuggestions"
