--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,10 @@
         android:inputType="text|textNoSuggestions"
         android:maxLines="1"
         android:lines="1"
+        android:paddingStart="16dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="8dp"
         android:minHeight="48dp"
         android:ems="10"
         android:hint="  Enter username or email"
@@ -69,6 +73,10 @@
         android:inputType="textPassword"
         android:maxLines="1"
         android:lines="1"
+        android:paddingStart="16dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="8dp"
         android:hint="  Enter Password"
         android:background="@drawable/signup_rectangle"
         android:textColor="#000000"
