confirmtaion page UI fixes

--- a/MyApplication/app/src/main/res/layout/activity_signup.xml
+++ b/MyApplication/app/src/main/res/layout/activity_signup.xml
@@ -32,6 +32,7 @@
         android:id="@+id/editText1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:minHeight="48dp"
         android:hint="  Enter email"
         android:inputType="textEmailAddress"
         android:maxLines="1"
@@ -63,6 +64,7 @@
         android:id="@+id/editText3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:minHeight="48dp"
         android:hint="  Enter password"
         android:inputType="textPassword"
         android:maxLines="1"
@@ -93,6 +95,7 @@
         android:id="@+id/editText4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:minHeight="48dp"
         android:hint="  Repeat password"
         android:inputType="textPassword"
         android:maxLines="1"
@@ -107,16 +110,18 @@
         android:layout_marginTop="@dimen/between_elements_spacing" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="SIGN UP"
-        android:textColor="#ffffff"
-        android:textSize="22sp"
-        android:background="@drawable/rounded_rectangle"
-        app:layout_constraintTop_toBottomOf="@id/editText4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.8"
-        android:layout_marginTop="@dimen/logo_to_first_element_margin" />
+    android:id="@+id/signupButton"  
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:minHeight="48dp"
+    android:background="@drawable/rounded_rectangle"
+    android:text="SIGN UP"
+    android:textColor="#ffffff"
+    android:textSize="22sp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintWidth_percent="0.8"
+    app:layout_constraintVertical_bias="0.9" />
 </androidx.constraintlayout.widget.ConstraintLayout>
