--- a/MyApplication/app/src/main/res/layout/activity_confirmation.xml
+++ b/MyApplication/app/src/main/res/layout/activity_confirmation.xml
@@ -7,29 +7,26 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@id/textView1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.3"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintWidth_percent="0.8" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="@dimen/logo_top_margin" />
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Please enter the code sent to your TU/e email"
+        android:text="Please enter the code sent to your email:"
         android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@id/editText1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView" 
-        app:layout_constraintVertical_bias="0.1" />
+        android:textSize="18sp"
+        android:gravity="start"
+        app:layout_constraintStart_toStartOf="@id/editText1"
+        app:layout_constraintEnd_toEndOf="@id/editText1"
+        app:layout_constraintTop_toBottomOf="@id/imageView"
+        android:layout_marginTop="@dimen/logo_to_first_element_margin" />
 
     <EditText
         android:id="@+id/editText1"
@@ -37,35 +34,32 @@
         android:layout_height="wrap_content"
         android:minHeight="48dp"
         android:maxLines="1"
-        android:lines="1"
-        android:paddingStart="16dp"
-        android:paddingTop="8dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="8dp"
-        android:ems="10"
+        android:padding="8dp"
         android:background="@drawable/signup_rectangle"
         android:inputType="text|textNoSuggestions"
         android:hint="  Enter code"
         android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@id/button2"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView1"
-        app:layout_constraintWidth_percent="0.8" /> <!-- 80% of parent's width -->
+        app:layout_constraintWidth_percent="0.8"
+        android:layout_marginTop="@dimen/between_elements_spacing" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:minHeight="48dp"
         android:background="@drawable/rounded_rectangle"
         android:text="LOG IN"
         android:textColor="#ffffff"
-        android:textSize="32sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editText1"
-        app:layout_constraintHeight_percent="0.1" /> <!-- 10% of parent's height -->
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.8"
+        app:layout_constraintVertical_bias="0.9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
