--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -7,62 +7,58 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="0dp" 
-        android:layout_height="0dp" 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/logo"
-        app:layout_constraintWidth_percent="0.8" 
-        app:layout_constraintHeight_percent="0.3" 
-        app:layout_constraintBottom_toTopOf="@id/textView1"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        android:layout_marginTop="@dimen/logo_top_margin" />
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="User Name or Email"
         android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="18sp"
+        android:gravity="start"
+        app:layout_constraintStart_toStartOf="@id/editText1"
+        app:layout_constraintEnd_toEndOf="@id/editText1"
         app:layout_constraintTop_toBottomOf="@id/imageView"
-        app:layout_constraintVertical_bias="0.1" />
+        android:layout_marginTop="@dimen/logo_to_first_element_margin" />
 
     <EditText
         android:id="@+id/editText1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="text|textNoSuggestions"
-        android:maxLines="1"
-        android:lines="1"
-        android:paddingStart="16dp"
-        android:paddingTop="8dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="8dp"
         android:minHeight="48dp"
         android:ems="10"
+        android:inputType="text|textNoSuggestions"
+        android:maxLines="1"
+        android:padding="8dp"
         android:hint="  Enter username or email"
         android:background="@drawable/signup_rectangle"
         android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView1"
-        app:layout_constraintWidth_percent="0.8" /> <!-- 80% of parent's width -->
+        app:layout_constraintWidth_percent="0.8"
+        android:layout_marginTop="@dimen/between_elements_spacing" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Password"
         android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="18sp"
+        android:gravity="start"
+        app:layout_constraintStart_toStartOf="@id/editText2"
+        app:layout_constraintEnd_toEndOf="@id/editText2"
         app:layout_constraintTop_toBottomOf="@id/editText1"
-        app:layout_constraintVertical_bias="0.05" />
+        android:layout_marginTop="@dimen/element_spacing" />
 
     <EditText
         android:id="@+id/editText2"
@@ -72,34 +68,33 @@
         android:ems="10"
         android:inputType="textPassword"
         android:maxLines="1"
-        android:lines="1"
-        android:paddingStart="16dp"
-        android:paddingTop="8dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="8dp"
+        android:padding="8dp"
         android:hint="  Enter Password"
         android:background="@drawable/signup_rectangle"
         android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView2"
-        app:layout_constraintWidth_percent="0.8" /> 
+        app:layout_constraintWidth_percent="0.8"
+        android:layout_marginTop="@dimen/between_elements_spacing" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:minHeight="48dp"
         android:background="@drawable/rounded_rectangle"
         android:text="LOG IN"
         android:textColor="#ffffff"
-        android:textSize="32sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editText2"
-        app:layout_constraintWidth_percent="0.8" 
-        app:layout_constraintVertical_bias="0.1" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.8"
+        app:layout_constraintVertical_bias="0.9" />
+        
     <Button
         android:id="@+id/button3"
         android:layout_width="0dp"
@@ -109,10 +104,10 @@
         android:textAllCaps="false"
         android:textColor="#ffffff"
         android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button2"
-        app:layout_constraintWidth_percent="0.5" 
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/button2"
+        app:layout_constraintWidth_percent="0.5"
+        android:layout_marginBottom="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
