--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -90,24 +90,30 @@
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editText2"
         app:layout_constraintWidth_percent="0.8"
-        app:layout_constraintVertical_bias="0.9" />
+        app:layout_constraintVertical_bias="0.9" 
+        android:layout_marginTop="@dimen/button_spacing" />
         
     <Button
         android:id="@+id/button3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:minHeight="48dp"
         android:background="@drawable/rounded_rectangle"
         android:text="Trouble Signing In?"
         android:textAllCaps="false"
         android:textColor="#ffffff"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/button2"
-        app:layout_constraintWidth_percent="0.5"
-        android:layout_marginBottom="16dp" />
+        app:layout_constraintEnd_toEndOf="parent" 
+        app:layout_constraintTop_toBottomOf="@id/button2"
+        app:layout_constraintWidth_percent="0.4"
+        app:layout_constraintVertical_bias="0.1"
+        android:layout_marginTop="@dimen/between_elements_spacing" />
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
