--- a/MyApplication/app/src/main/res/layout/activity_starting.xml
+++ b/MyApplication/app/src/main/res/layout/activity_starting.xml
@@ -8,25 +8,22 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="160dp"
+        android:layout_height="wrap_content"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintWidth_percent="0.8" />
+        android:layout_marginTop="@dimen/logo_top_margin" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="@dimen/button_spacing2"
         android:background="@drawable/rounded_rectangle"
         android:text="LOG IN"
         android:textColor="#ffffff"
-        android:textSize="32sp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView"
@@ -36,11 +33,11 @@
         android:id="@+id/button3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/element_spacing"
         android:background="@drawable/rounded_rectangle"
         android:text="SIGN UP"
         android:textColor="#ffffff"
-        android:textSize="32sp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button2"
