--- a/MyApplication/app/src/main/res/layout/activity_notification_signin.xml
+++ b/MyApplication/app/src/main/res/layout/activity_notification_signin.xml
@@ -19,33 +19,15 @@
         android:id="@+id/textView1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Please enter the code sent to your email:"
+        android:text="Your password has been changed successfully."
         android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="18sp"
         android:gravity="start"
-        app:layout_constraintStart_toStartOf="@id/editText1"
-        app:layout_constraintEnd_toEndOf="@id/editText1"
+        app:layout_constraintStart_toStartOf="@id/button2"
+        app:layout_constraintEnd_toEndOf="@id/button2"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         android:layout_marginTop="@dimen/logo_to_first_element_margin" />
-
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:maxLines="1"
-        android:padding="8dp"
-        android:background="@drawable/signup_rectangle"
-        android:inputType="text|textNoSuggestions"
-        android:hint="  Enter code"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView1"
-        app:layout_constraintWidth_percent="0.8"
-        android:layout_marginTop="@dimen/between_elements_spacing" />
 
     <Button
         android:id="@+id/button2"
@@ -53,7 +35,7 @@
         android:layout_height="wrap_content"
         android:minHeight="48dp"
         android:background="@drawable/rounded_rectangle"
-        android:text="LOG IN"
+        android:text="SKIP"
         android:textColor="#ffffff"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
