--- a/MyApplication/app/src/main/res/layout/activity_profiledetail.xml
+++ b/MyApplication/app/src/main/res/layout/activity_profiledetail.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/profile_gradient">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -81,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Marijuana"
-            android:textColor="#a1aec1"
+            android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.157"
@@ -136,13 +137,12 @@
             android:id="@+id/confirm_button"
             android:layout_width="309dp"
             android:layout_height="60dp"
-            android:layout_marginTop="176dp"
+            android:layout_marginTop="168dp"
             android:background="@drawable/pink_rounded"
             android:text="Confirm"
             android:textColor="#ffffff"
             android:textSize="32sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.45"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/Marijuana_menu"
             app:layout_constraintWidth_percent="0.8" />
