--- a/MyApplication/app/src/main/res/layout/activity_signup.xml
+++ b/MyApplication/app/src/main/res/layout/activity_signup.xml
@@ -20,6 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="TU/e Email:"
+        android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="18sp"
         android:gravity="start"  
@@ -52,6 +53,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Enter a password:"
+        android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="18sp"
         android:gravity="start"  
@@ -83,6 +85,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Enter your password again:"
+        android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="18sp"
         android:gravity="start"  
