--- a/MyApplication/app/src/main/res/layout/activity_preference_detail.xml
+++ b/MyApplication/app/src/main/res/layout/activity_preference_detail.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
-            android:text="Profile Details"
+            android:text="Your ideal type"
             android:textColor="#000000"
             android:textSize="48sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
             android:text="Alcohol"
-            android:textColor="#a1aec1"
+            android:textStyle="bold"
+            android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.145"
@@ -57,7 +58,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Smoking"
-            android:textColor="#a1aec1"
+            android:textStyle="bold"
+            android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.15"
@@ -82,6 +84,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Marijuana"
+            android:textStyle="bold"
             android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,33 +108,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Favorite Food"
-            android:textColor="#a1aec1"
+            android:text="Preferred diet"
+            android:textStyle="bold"
+            android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.181"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/Marijuana_menu" />
 
-        <EditText
-            android:id="@+id/editText4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        <Spinner
+            android:id="@+id/Food_menu"
+            android:layout_width="276dp"
+            android:layout_height="48dp"
             android:layout_marginTop="12dp"
-            android:background="@drawable/signup_rectangle"
-            android:ems="10"
-            android:hint="  Enter favorite food"
-            android:inputType="text|textNoSuggestions"
-            android:lines="1"
-            android:maxLines="1"
-            android:minHeight="48dp"
-            android:textColor="#000000"
-            android:textSize="18sp"
+            android:entries="@array/food"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.585"
+            app:layout_constraintHorizontal_bias="0.377"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/FavoriteFood"
-            app:layout_constraintWidth_percent="0.8" />
+            app:layout_constraintTop_toBottomOf="@id/FavoriteFood" />
 
         <Button
             android:id="@+id/confirm_button"
