--- a/MyApplication/app/src/main/res/values/arrays.xml
+++ b/MyApplication/app/src/main/res/values/arrays.xml
@@ -3,4 +3,13 @@
         <item>Yes</item>
         <item>No</item>
     </string-array>
+    <string-array name="food">
+        <item>Omnivore</item>
+        <item>Vegetarian</item>
+        <item>Vegan</item>
+        <item>Pescatarian</item>
+    </string-array>
 </resources>
+
+
+
