--- a/MyApplication/app/src/main/res/layout/activity_preference_detail.xml
+++ b/MyApplication/app/src/main/res/layout/activity_preference_detail.xml
@@ -47,6 +47,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="16dp"
             android:entries="@array/options"
+            android:background="@drawable/rounded_rectangle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.355"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,6 +73,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="136dp"
             android:entries="@array/options"
+            android:background="@drawable/rounded_rectangle"
             android:hint="Smoking"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.355"
@@ -98,6 +100,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="240dp"
             android:entries="@array/options"
+            android:background="@drawable/rounded_rectangle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.355"
             app:layout_constraintStart_toStartOf="parent"
@@ -123,6 +126,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="12dp"
             android:entries="@array/food"
+            android:background="@drawable/rounded_rectangle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.377"
             app:layout_constraintStart_toStartOf="parent"
