--- a/MyApplication/app/src/main/res/layout/activity_profiledetailone.xml
+++ b/MyApplication/app/src/main/res/layout/activity_profiledetailone.xml
@@ -26,7 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:text="First name"
-        android:textColor="#a1aec1"
+        android:textStyle="bold"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.205"
@@ -58,7 +59,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Last name"
-        android:textColor="#a1aec1"
+        android:textStyle="bold"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.204"
@@ -92,7 +94,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Please enter your Birthdate"
-        android:textColor="#a1aec1"
+        android:textColor="#000000"
+        android:textStyle="bold"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
