--- a/MyApplication/app/src/main/res/layout/activity_change_password.xml
+++ b/MyApplication/app/src/main/res/layout/activity_change_password.xml
@@ -52,15 +52,15 @@
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Enter a new password:"
-        android:textStyle="bold"
+        android:layout_marginTop="@dimen/element_spacing"
+        android:gravity="start"
+        android:text="Enter a New Password:"
         android:textColor="#000000"
         android:textSize="18sp"
-        android:gravity="start"
-        app:layout_constraintStart_toStartOf="@id/editText1"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/editText1"
-        app:layout_constraintTop_toBottomOf="@id/editText1"
-        android:layout_marginTop="@dimen/element_spacing" />
+        app:layout_constraintStart_toStartOf="@id/editText1"
+        app:layout_constraintTop_toBottomOf="@id/editText1" />
 
     <EditText
         android:id="@+id/editText3"
@@ -84,15 +84,15 @@
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Enter your new password again:"
-        android:textStyle="bold"
+        android:layout_marginTop="@dimen/element_spacing"
+        android:gravity="start"
+        android:text="Enter Your New Password Again:"
         android:textColor="#000000"
         android:textSize="18sp"
-        android:gravity="start"
-        app:layout_constraintStart_toStartOf="@id/editText3"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/editText3"
-        app:layout_constraintTop_toBottomOf="@id/editText3"
-        android:layout_marginTop="@dimen/element_spacing" />
+        app:layout_constraintStart_toStartOf="@id/editText3"
+        app:layout_constraintTop_toBottomOf="@id/editText3" />
 
     <EditText
         android:id="@+id/editText4"
