--- a/MyApplication/app/src/main/res/layout/activity_profiledetailone.xml
+++ b/MyApplication/app/src/main/res/layout/activity_profiledetailone.xml
@@ -42,6 +42,7 @@
         android:background="@drawable/signup_rectangle"
         android:ems="10"
         android:hint="  Enter first name"
+        android:padding="8dp"
         android:inputType="text|textNoSuggestions"
         android:lines="1"
         android:maxLines="1"
@@ -75,6 +76,7 @@
         android:background="@drawable/signup_rectangle"
         android:ems="10"
         android:hint="  Enter last name"
+        android:padding="8dp"
         android:inputType="textPersonName"
         android:lines="1"
         android:maxLines="1"
